--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
 name: Update Radar Page
 on:
   schedule:
-    - cron: '0 13 * * *' # 北京时间 21:00 自动更新
-  workflow_dispatch: # 允许你手动点击运行
+    - cron: '0 1 * * *' # 这代表每天北京时间 09:00 自动运行
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
